--- a/css/style.css
+++ b/css/style.css
@@ -4,14 +4,18 @@ body {
     font-family: "Oswald", sans-serif;
     font-size: 13px;
     padding: 30px;
-    background: #a6ddd8;
+    background: #efeef4;
 }
 
 #title {
+    position: fixed;
     height: 5em;
-    background: #6b6b6b;
+    width: 150em;
+    background: #b1bbd9;
     box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.1);
     margin-bottom: 50px;
+    padding-top: 8px;
+    padding-left: 8px;
 }
 
 #filter-panel {
@@ -19,7 +23,7 @@ body {
     width: 20em;
     right: 0;
     top: 150px;
-    background: #6b6b6b;
+    background: #b1bbd9;
     height: 50em;
     box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.1);
 }
