--- a/css/style.css
+++ b/css/style.css
@@ -26,8 +26,14 @@ body {
     background: #b1bbd9;
     height: 50em;
     box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.1);
+    padding: 2em;
 }
 
+.legend-color {
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+}
 
 #linechart {
     background: white;
